game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__miss_with_weapon_break_no_penalty.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "😰 Alice attacks Bob, but misses!"
