game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__self_attack_wound_with_weapon_worn.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🗡️ Alice's Iron Sword is showing signs of wear"
- 🤦 Alice tries to attack themself!
- "🔪 Alice attacks Alice, and wins!"
- 🤕 Alice wounds Alice
