game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__suicide.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🤦 Alice tries to attack themself!
- "🔪 Alice attacks Alice, and wins!"
- 🪒 Alice attempts suicide.
