game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__wound.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
