game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__wound_with_shield_break_and_penalty.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🛡️ Bob breaks their Iron Buckler
- "🛡️ Bob's Iron Buckler shatters mid-block! (-2 defense)"
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
