game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__wound_with_shield_worn.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🛡️ Bob's Iron Buckler is showing signs of wear"
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
