game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__wound_with_stress_fallback_to_attacker.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
- "😱 Alice is horrified by the violence, loses 6 sanity."
